issues with db
